...
            if newValue == true && managerManager.vmStoreIsEmpty {
                print("Opening window")
                openWindow(id: "splash")
            }
        }

        Window("Welcome to Arkyve", id: "splash") {
            SplashView()
                .containerBackground(.thickMaterial, for: .window)
                .windowMinimizeBehavior(.disabled)
                .windowResizeBehavior(.disabled)
        }
        .windowStyle(.hiddenTitleBar)
...

        UtilityWindow("Log viewer", id: "log-window") {
            LogWindowView()
        }
        .defaultLaunchBehavior(.suppressed)

        Settings() {
            SettingsView()
                .environmentObject(settingsManager)
        }
        .commands {
            MenuCommands(settingsManager: settingsManager)
        }
...
